[package]
name = "rustheus-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14"
prost-types = "0.14"
snap = "1.1"
zstd = "0.13"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[build-dependencies]
prost-build = "0.14"

[features]
reqwest = ["dep:reqwest"]
